--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       <header class="head">
           <section class="top-content">
               <section class="intro">
-                  <img src="#" class="name-logo" style="max-width: 800px;" alt="Company Logo" />
+                  <img src="images\ghanaMakeADifference.png" class="name-logo" style="max-width: 800px;" alt="Company Logo" />
               </section>
               <section class="intro-content">
-                  <img src="#" class="header-image" style="max-height: 350px; width: 100%;">
-                  <!-- <a href="http://precision-party-planner.netlify.com/" class="contact-us">Sign Up</a> -->
-                  <div class="title-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit..</div>
+                <h1 class="title-text">International Education Connection</h1>
+              </section>
+              <section class="intro-content">
+                <a href="https://inssw.netlify.com/" class="contact-us">Sign Up</a>
               </section>
 
           </section>
