--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
     <div class="navigation">
 
         <img src="images\ghanaMakeADifference.png" class="name-logo" style="max-width: 800px;" alt="Company Logo" />
-    
+        <h1 class="title-text">International Education Connection</h1>
         <nav class="about">
-            <a href="index.html">Home</a>            
-            <a href="https://inssw.netlify.com/" class="contact-us">Sign Up</a>
+            <a href="index.html"><h3>Home</h3></a>            
+            <a href="https://inssw.netlify.com/" class="contact-us"><h3>Sign Up</h3></a>
         </nav>
     </div>
 
@@ -29,7 +29,7 @@
         <div class="topmember">
             <div class="members-pl">
                 <h1>Project Lead</h1>
-                <!-- <img src="img\Wes Jonke.jpg" alt="Wes Jonke"> -->
+                <img src="images\Michael-Harris.jpg" alt="Wes Jonke">
                 <h3>Michael Harris</h3>
                 <p>As a web developer you are always learning, which I now love to learn. I am proud of the progress I've made and look forward to the future successes and failures. Every day I code there is a new challenge. Sometimes it gets very frustrating  but I remember to stick to it. "An investment in knowledge pays the best interest".</p>
             </div>
@@ -38,7 +38,7 @@
         <div class="topmember">
             <div class="members-pl">
                 <h1>Backend</h1>
-                <!-- <img src="img\Wes Jonke.jpg" alt="Wes Jonke"> -->
+                <img src="images\Tara-Sherman.png" alt="Wes Jonke">
                 <h3>Tara Sherman</h3>
                 <p>A Florida native, Tara is currently employed as an optometric assistant. After years of dissatisfaction with her quality of life and the changes in the medical profession, she discovered and eventually enrolled in Lambda School's part-time Full Stack Web Developer course in November 2018. She currently lives in Central Florida with her long-time best friend and their dog, Miles.</p>
             </div>
@@ -47,7 +47,7 @@
         <div class="secondmembers">
             <h1>Web React II</h1>
             <div class="members-wrII">
-                <!-- <img src="img\Nick Durbin.jpg" alt="Nick Durbin"> -->
+                <img src="images\Anna-Morris.jpg" alt="Nick Durbin">
                 <h3>Anna Morris</h3>
                 <p>Nick is a Full Stack engineer focused in React, Node, and Express. Currently, I am the Project Manager for a startup company called PokerSports in the esports and daily fantasy industry. I am a diehard Cleveland sports fan and hope to create applications that better the world.</p>
             </div>
@@ -56,12 +56,12 @@
         <div class="thirdmembers">
                 <h1>Web React I</h1>
             <div class="members-wrI">
-                <!-- <img src="img\Zachary Murray.jpg" alt="Zachary Murray"> -->
+                <img src="images\Micheal-Luck.jpg" alt="Zachary Murray">
                 <h3>Michael Luck</h3>
                 <p>After having his interest in programming piqued during a computer games creation course in community college, Zach decided to pursue a career as a full stack web developer. He is currently studying full stack web development at Lambda School and working as a freelance transcriptionist for rev.com. He enjoys riding motorcycles, video games, and spending time with friends, family, and his cat when he isn’t coding.</p>
             </div>
             <div class="members-wrI">
-                <!-- <img src="img\Tara Gamache.jpg" alt="Tara Gamache"> -->
+                <img src="images\Chris-Reyes.png" alt="Tara Gamache">
                 <h3>Christian Reyes</h3>
                 <p>My name is Chris Reyes, I am Chicago native. I am obsessed with technology and the future. Hoping to use my skills to make a better world for consumers and customers.</p>
             </div>
@@ -70,7 +70,7 @@
         <div class="bottommembers">
             <h1>Web UI</h1>
             <div class="members-web">
-                <img src="img\Damika Weems.jpg" alt="Damika Weems">
+                <img src="images\Damika-Weems.jpg" alt="Damika Weems">
                 <h3>Damika Weems</h3>
                 <p>Damika is a Full Stack Web Development student. Prior to Lambda School, she worked as a Compliance Officer at a Drug & Alcohol Rehabilitation Center. She enjoys spending time with family, crafting, and learning new things in her free time.</p>
             </div>
